<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@drawable/remote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_brightness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/back_button"
            android:padding="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/buttonUP"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/brightness_up"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonDOWN"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="4dp"
                android:background="@drawable/brightness_down"
                app:layout_constraintStart_toEndOf="@+id/buttonUP"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_power"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/back_button"
            android:padding="8dp"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toEndOf="@+id/layout_brightness"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/button_powerOFF"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="4dp"
                android:text="@string/off"
                android:textSize="32sp"
                android:textColor="#FFF"
                android:textAlignment="center"
                android:background="@drawable/off"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_powerON"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="4dp"
                android:text="@string/on"
                android:textSize="32sp"
                android:textColor="#FFF"
                android:textAlignment="center"
                android:background="@drawable/on"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button_powerOFF"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/back_button"
            android:layout_marginTop="6dp"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/layout_brightness"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/button_red"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="4dp"
                android:text="@string/red"
                android:textColor="#FFF"
                android:textSize="40sp"
                android:background="@drawable/red"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_orange"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/orange"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_red" />

            <Button
                android:id="@+id/button_lightORANGE"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/lorange"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_orange" />

            <Button
                android:id="@+id/button_darkYELLOW"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/dyellow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_lightORANGE" />

            <Button
                android:id="@+id/button_yellow"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/yellow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_darkYELLOW" />

            <Button
                android:id="@+id/button_green"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/green"
                android:textColor="#FFF"
                android:textSize="40sp"
                android:background="@drawable/green"
                app:layout_constraintStart_toEndOf="@+id/button_red"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_lightGREEN"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/lgreen"
                app:layout_constraintStart_toEndOf="@+id/button_orange"
                app:layout_constraintTop_toBottomOf="@+id/button_green" />

            <Button
                android:id="@+id/button_CYAN"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/cyan"
                app:layout_constraintStart_toEndOf="@+id/button_lightORANGE"
                app:layout_constraintTop_toBottomOf="@+id/button_lightGREEN"/>

            <Button
                android:id="@+id/button_darkCYAN"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/dcyan"
                app:layout_constraintStart_toEndOf="@+id/button_darkYELLOW"
                app:layout_constraintTop_toBottomOf="@+id/button_CYAN" />

            <Button
                android:id="@+id/button_darkCYAN2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/dcyan2"
                app:layout_constraintStart_toEndOf="@+id/button_yellow"
                app:layout_constraintTop_toBottomOf="@+id/button_darkCYAN" />

            <Button
                android:id="@+id/button_blue"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/blue"
                android:textColor="#FFF"
                android:textSize="40sp"
                android:background="@drawable/blue"
                app:layout_constraintStart_toEndOf="@+id/button_green"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_lightBLUE"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/lblue"
                app:layout_constraintStart_toEndOf="@+id/button_lightGREEN"
                app:layout_constraintTop_toBottomOf="@+id/button_blue" />

            <Button
                android:id="@+id/button_VIOLET"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/violet"
                app:layout_constraintStart_toEndOf="@+id/button_CYAN"
                app:layout_constraintTop_toBottomOf="@+id/button_lightBLUE" />

            <Button
                android:id="@+id/button_lightVIOLET"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/lviolet"
                app:layout_constraintStart_toEndOf="@+id/button_darkCYAN"
                app:layout_constraintTop_toBottomOf="@+id/button_VIOLET" />

            <Button
                android:id="@+id/button_pink"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/pink"
                app:layout_constraintStart_toEndOf="@+id/button_darkCYAN2"
                app:layout_constraintTop_toBottomOf="@+id/button_lightVIOLET" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="6dp"
            android:padding="8dp"
            android:background="@drawable/back_button"
            app:layout_constraintStart_toEndOf="@+id/layout_color"
            app:layout_constraintTop_toBottomOf="@+id/layout_power"
            app:layout_constraintEnd_toEndOf="parent">

            <Button
                android:id="@+id/button_white"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="4dp"
                android:text="@string/white"
                android:textColor="#000"
                android:textSize="40sp"
                android:background="@drawable/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/button_flash"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="4dp"
                android:text="@string/flash"
                android:textSize="20sp"
                android:textColor="#FFF"
                android:background="@drawable/mode"
                app:layout_constraintTop_toBottomOf="@+id/button_white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/button_strobe"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="4dp"
                android:text="@string/strobe"
                android:textSize="18sp"
                android:textColor="#FFF"
                android:background="@drawable/mode"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_flash" />

            <Button
                android:id="@+id/button_fade"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="4dp"
                android:text="@string/fade"
                android:textColor="#FFF"
                android:textSize="20sp"
                android:background="@drawable/mode"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_strobe" />

            <Button
                android:id="@+id/button_smooth"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:text="@string/smooth"
                android:textSize="16sp"
                android:textColor="#FFF"
                android:background="@drawable/mode"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_fade" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>